[tool.poetry]
name = "basana"
version = "1.10"
homepage = "https://github.com/gbeced/basana"
repository = "https://github.com/gbeced/basana"
documentation = "https://basana.readthedocs.io/en/latest/"
description = "A Python async and event driven framework for algorithmic trading, with a focus on crypto currencies."
authors = ["Gabriel Becedillas <gabriel.becedillas@gmail.com>"]
license = "Apache-2.0"
packages = [{include = "basana"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = {extras = ["speedups"], version = "^3.10"}
python-dateutil = "^2.9"
# Optional dependencies, some of which are included in the below `extras`. They can be opted into by apps.
plotly = {version = "^5.14.1", optional = true}
kaleido = {version = "0.2.1", optional = true}

[tool.poetry.extras]
charts = ["plotly", "kaleido"]

[tool.poetry.group.dev.dependencies]
aioresponses = "^0.7.7"
mypy = "^1.11"
pytest = "^8.3"
pytest-cov = "^5.0"
pytest-mock = "^3.14"
talipp = "^2.4"
types-python-dateutil = "^2.9"
websockets = "^13"
pandas = "^2.2"
statsmodels = "^0.14"
textual = "^6.3.0"
ruff = "^0.14.2"

[tool.poetry.group.docs.dependencies]
sphinx = {version = "^9", markers = "python_version >= '3.11'"}
sphinx-rtd-theme = {version = "^3.0", markers = "python_version >= '3.11'"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = [
    "pocs"
]

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501"]

