[tool.poetry]
name = "basana"
version = "1.10.2"
homepage = "https://github.com/gbeced/basana"
repository = "https://github.com/gbeced/basana"
documentation = "https://basana.readthedocs.io/en/latest/"
description = "A Python async and event driven framework for algorithmic trading, with a focus on crypto currencies."
authors = ["Gabriel Becedillas <gabriel.becedillas@gmail.com>"]
license = "Apache-2.0"
packages = [{include = "basana"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = {extras = ["speedups"], version = "^3.13.5"}
python-dateutil = "^2.9.0.post0"
# Optional dependencies, some of which are included in the below `extras`. They can be opted into by apps.
plotly = {version = "^6.7.0", optional = true}
kaleido = {version = "^1.2.0", optional = true}

[tool.poetry.extras]
charts = ["plotly", "kaleido"]

[tool.poetry.group.dev.dependencies]
aioresponses = "^0.7.8"
mypy = "^1.20.1"
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.1.0"
pytest-mock = "^3.15.1"
talipp = "^2.7.0"
types-python-dateutil = "^2.9.0.20260408"
websockets = "^16.0"
pandas = "^2.2"
statsmodels = "^0.14.6"
textual = "^8.2.3"
ruff = "^0.15.10"

[tool.poetry.group.docs.dependencies]
sphinx = {version = "^9", markers = "python_version >= '3.11'"}
sphinx-rtd-theme = {version = "^3.0", markers = "python_version >= '3.11'"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = [
    "pocs"
]

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501"]

