[project]
name = "basana"
version = "1.10.2"
description = "A Python async and event driven framework for algorithmic trading, with a focus on crypto currencies."
authors = [{ name = "Gabriel Becedillas", email = "gabriel.becedillas@gmail.com" }]
requires-python = ">=3.10,<4"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiohttp[speedups]>=3.13.5,<3.14",
    "python-dateutil>=2.9.0.post0,<3",
]

[project.optional-dependencies]
charts = [
    "plotly>=6.7.0,<7",
    "kaleido>=1.2.0,<2",
]

[project.urls]
Homepage = "https://github.com/gbeced/basana"
Repository = "https://github.com/gbeced/basana"
Documentation = "https://basana.readthedocs.io/en/latest/"

[dependency-groups]
dev = [
    "aioresponses>=0.7.8,<0.8",
    "mypy>=1.20.1,<2",
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-cov>=7.1.0,<8",
    "pytest-mock>=3.15.1,<4",
    "talipp>=2.7.0,<3",
    "types-python-dateutil>=2.9.0.20260408,<3",
    "websockets>=16.0,<17",
    "pandas>=2.2,<3",
    "statsmodels>=0.14.6,<0.15",
    "textual>=8.2.3,<9",
    "ruff>=0.15.10,<0.16",
    "invoke>=3.0.3",
]
docs = [
    "sphinx>=9,<10 ; python_version >= '3.11'",
    "sphinx-rtd-theme>=3.0,<4 ; python_version >= '3.11'",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["basana"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
exclude = [
    "pocs"
]

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501"]

